--- a/app/presentation/components/5-pages/home/home-page.styl
+++ b/app/presentation/components/5-pages/home/home-page.styl
@@ -4,3 +4,17 @@
     justify-content center
     width 100%
     height 100%
+
+    .pg-home__body
+        position relative
+        width 300px
+
+        .svg
+            width 100%
+
+        span
+            position absolute
+            top 50%
+            left 50%
+            color #ffffff
+            transform translate(-50%, -50%)
