Add example runtime config

--- a/app/presentation/components/5-pages/home/home-page.styl
+++ b/app/presentation/components/5-pages/home/home-page.styl
@@ -12,9 +12,13 @@
         .svg
             width 100%
 
-        span
+        a
             position absolute
             top 50%
             left 50%
-            color #ffffff
+            color white
+            text-decoration none
             transform translate(-50%, -50%)
+
+            &:hover
+                text-decoration underline
