--- a/app/presentation/components/5-pages/home/home-page.styl
+++ b/app/presentation/components/5-pages/home/home-page.styl
@@ -1,11 +1,11 @@
-.pg-home
+.home-page
     display flex
     align-items center
     justify-content center
     width 100%
     height 100%
 
-    .pg-home__body
+    .home-page__body
         position relative
         width 300px
 
