Update all packages to latest versions and major refactoring of various parts of the boilerplate.

--- a/app/0-foundation/config/typography.styl
+++ b/app/0-foundation/config/typography.styl
@@ -1,7 +1,7 @@
 Typography = {}
 
 Typography.fonts = {}
-Typography.fonts.primary = 'Arial' \, sans-serif;
+Typography.fonts.primary = 'Quicksand' \, sans-serif;
 
 Typography.sizes = {}
 Typography.sizes.base = 16px
