--- a/app/4-presentation/component/5-pages/home-page.styl
+++ b/app/4-presentation/component/5-pages/home-page.styl
@@ -2,12 +2,14 @@
   display flex
   align-items center
   justify-content center
+  flex-direction column
   width 100%
   height 100%
 
-  .home-page__body
+  .home-page__cloud
     position relative
-    width 300px
+    width 100%
+    max-width toRem(300px)
 
     .svg
       width 100%
@@ -17,8 +19,13 @@
       top 50%
       left 50%
       color white
+      font-size toRem(24px)
       text-decoration none
+      white-space nowrap
       transform translate(-50%, -50%)
 
       &:hover
         text-decoration underline
+
+  .home-page__device
+    margin-top toRem(24px)
